modified the client and added the diagram

--- a/MakeFile
+++ b/MakeFile
@@ -1,5 +1,5 @@
-all:
-	g++ -std=c++11 charvar.cpp numericvar.cpp parse.cpp realvar.cpp stringvar.cpp var.cpp wrap.cpp Connection.cpp TCPServerSocket.cpp TCPSocket.cpp server.cpp GarbageCollector.cpp Thread.cpp -lpthread
-	./a.out
-	gcc client.c -o client
-	./client
+server:
+	g++ -std=c++11 charvar.cpp numericvar.cpp parse.cpp realvar.cpp stringvar.cpp var.cpp wrap.cpp Connection.cpp TCPServerSocket.cpp TCPSocket.cpp  GarbageCollector.cpp Thread.cpp server.cpp -lpthread -o server && ./server
+
+client:
+	g++ client.cpp -o client && ./client
